--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi, I'm Kelly Ton</h1>
-
-    <h3>Hello</h3>
+    <nav id="navbar">
+        <h1>kelly ton</h1>
+        <h3>about</h3>
+        <h3>experience</h3>
+        <h3>projects</h3>
+        <h3>contact</h3>
+    </nav>
+    <div id="main-text">
+        <h3>hey there, i am</h3>
+        <h1>Kelly</h1>
+        <h3>I am an aspiring software engineer.</h3>
+    </div>
 </body>
 </html>
