--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav id="navbar">
-        <h1>kelly ton</h1>
-        <h3>about</h3>
-        <h3>experience</h3>
-        <h3>projects</h3>
-        <h3>contact</h3>
-    </nav>
-    <div id="main-text">
-        <h3>hey there, i am</h3>
-        <h1>Kelly</h1>
-        <h3>I am an aspiring software engineer.</h3>
-    </div>
+    <header class="navbar">
+        <div class="site-name">
+            <h1>kelly.ton</h1>
+        </div>
+        <nav class="nav">
+            <ul class="nav-links">
+                <li><a href="#">about</a></li>
+                <li><a href="#">experience</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <div class="introduction-text">
+            <p>hey there, i am</p>
+            <h1>Kelly</h1>
+            <p>I am an aspiring software engineer.</p>
+        </div>
+        <div class="bedroom-image">
+            <img src="image-removebg-preview.png">
+        </div>
+    </main>
 </body>
 </html>
