--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelly Ton's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
         <div class="site-name">
-            <h1>kelly.ton</h1>
+            <h1>kelly<span>.</span>ton</h1>
         </div>
         <nav class="nav">
             <ul class="nav-links">
@@ -22,7 +25,7 @@
     </header>
     <main class="main">
         <div class="introduction-text">
-            <p>hey there, i am</p>
+            <p>Hey there, I am</p>
             <h1>Kelly</h1>
             <p>I am an aspiring software engineer.</p>
         </div>
