typing animations and adjustments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -26,7 +27,7 @@
     <main class="main">
         <div class="introduction-text">
             <p>Hey there, I am</p>
-            <h1>Kelly</h1>
+            <h1 class="typing">Kelly<span>.</span></h1>
             <p>I am an aspiring software engineer.</p>
         </div>
         <div class="bedroom-image">
