--- a/html/index.html
+++ b/html/index.html
@@ -4,34 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelly Ton's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+    <script src="../js/script.js" defer></script>
 </head>
 <body>
     <header class="navbar">
         <div class="site-name">
-            <h1>kelly<span>.</span>ton</h1>
+            <a href="">
+                <h1>kelly<span>.</span>ton</h1>
+            </a>
         </div>
         <nav class="nav">
             <ul class="nav-links">
-                <li><a href="#">about</a></li>
-                <li><a href="#">experience</a></li>
-                <li><a href="#">projects</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="experience.html">experience</a></li>
+                <li><a href="projects.html">projects</a></li>
             </ul>
         </nav>
     </header>
     <main class="main">
+        <div class="contact">
+            <a href="https://www.linkedin.com/in/kellytton/"><i class="ri-linkedin-box-fill"></i></a>
+            <a href="https://github.com/kellytton"><i class="ri-github-fill"></i></a>
+            <a href="mailto:kthton@gmail.com"><i class="ri-mail-line"></i></a>
+        </div>
         <div class="introduction-text">
             <p>Hey there, I am</p>
             <h1 class="typing">Kelly<span>.</span></h1>
             <p>I am an aspiring software engineer.</p>
         </div>
         <div class="bedroom-image">
-            <img src="image-removebg-preview.png">
+            <img src="../images/image-removebg-preview.png">
         </div>
     </main>
 </body>
