responsiveness and hovering contact animation

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
         <div class="introduction-text">
             <p>Hey there, I am</p>
             <h1 class="typing">Kelly<span>.</span></h1>
-            <p>I am an aspiring software engineer.</p>
+            <p>I am an aspiring software engineer and designer.</p>
         </div>
         <div class="bedroom-image">
             <img src="../images/image-removebg-preview.png">
