Connect each HTML page

--- a/html/about.html
+++ b/html/about.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Kelly Ton's Portfolio</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+    <script src="../js/script.js" defer></script>
 </head>
 <body>
-    <h1>About me page</h1>
+    <header class="navbar">
+        <div class="site-name">
+            <a href="index.html">
+                <h1>kelly<span>.</span>ton</h1>
+            </a>
+        </div>
+        <nav class="nav">
+            <ul class="nav-links">
+                <li><a href="about.html" class="active">about</a></li>
+                <li><a href="experience.html">experience</a></li>
+                <li><a href="projects.html">projects</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        
+    </main>
 </body>
 </html>
