--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="navbar">
         <div class="site-name">
-            <a href="">
+            <a href="#">
                 <h1>kelly<span>.</span>ton</h1>
             </a>
         </div>
@@ -38,7 +38,7 @@
         <div class="introduction-text">
             <p>Hey there, I am</p>
             <h1 class="typing">Kelly<span>.</span></h1>
-            <p>I am an aspiring software engineer and designer.</p>
+            <p>I am an <b>aspiring</b> software engineer and designer.</p>
         </div>
         <div class="bedroom-image">
             <img src="../images/image-removebg-preview.png">
