--- a/html/experience.html
+++ b/html/experience.html
@@ -12,6 +12,8 @@
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"/>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/portfolio_favicon.png">
     <script src="../js/script.js" defer></script>
 </head>
 <body>
