--- a/html/about.html
+++ b/html/about.html
@@ -12,6 +12,8 @@
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"/>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/portfolio_favicon.png">
     <script src="../js/script.js" defer></script>
 </head>
 <body>
@@ -30,7 +32,18 @@
         </nav>
     </header>
     <main class="main">
-        
+        <div class="avatar">
+
+        </div>
+        <div class="intro">
+            <h1>an introduction:</h1>
+            <p>Hi! My name is Kelly Ton, and I am currently in my fourth year at the University of South Florida located in Tampa, FL.
+                Studying Computer Science, I am working towards obtaining a Bachelor's of Science Degree in Spring 2025. Like the tech
+                industry, I am constantly evolving and refining my skills.
+            </p>
+            <br>
+            <p>Over the summer, I gained experience as a Data and Software Engineer intern at SMX. Here, I worked with NLP tools.</p>
+        </div>
     </main>
 </body>
 </html>
