--- a/html/index.html
+++ b/html/index.html
@@ -12,12 +12,14 @@
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"/>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/portfolio_favicon.png">
     <script src="../js/script.js" defer></script>
 </head>
 <body>
     <header class="navbar">
         <div class="site-name">
-            <a href="#">
+            <a href="index.html">
                 <h1>kelly<span>.</span>ton</h1>
             </a>
         </div>
