Map out projects page. Make navbar stick to top

--- a/html/about.html
+++ b/html/about.html
@@ -38,11 +38,13 @@
         <div class="intro">
             <h1>an introduction:</h1>
             <p>Hi! My name is Kelly Ton, and I am currently in my fourth year at the University of South Florida located in Tampa, FL.
-                Studying Computer Science, I am working towards obtaining a Bachelor's of Science Degree in Spring 2025. Like the tech
+                Studying Computer Science, I am working towards obtaining a Bachelor's of Science in Spring 2025. Like the tech
                 industry, I am constantly evolving and refining my skills.
             </p>
             <br>
-            <p>Over the summer, I gained experience as a Data and Software Engineer intern at SMX. Here, I worked with NLP tools.</p>
+            <p>Over the summer, I gained experience as a Data and Software Engineer intern at SMX. Here, I worked with NLP techniques.
+                
+            </p>
         </div>
     </main>
 </body>
