--- a/html/projects.html
+++ b/html/projects.html
@@ -32,7 +32,67 @@
         </nav>
     </header>
     <main class="main">
-        
+        <div class="projects-section">
+            <div class="projects-title">
+                <h1>Projects</h1>
+            </div>
+            <div class="projects-group">
+                <div class="project glass" id="project-1">
+                    <div class="project-line">
+                        <h1 class="project-title">Rapid Unix SHell</h1>
+                        <a href="https://github.com/kellytton/RUSH-Rapid-Unix-SHell"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p>I engineered a Unix shell in C to execute built-in commands (such as exit, cd, path) and facilitate external commands through child processes with the capacity for parallel command execution.
+                        The implementation contains robust output redirection functionality, enabling users to redirect command outputs to files, supporting both file overwriting and error handling for access issues.
+                    </p>
+                </div>
+                <div class="project glass" id="project-2">
+                    <div class="project-line">
+                        <h1 class="project-title">RAID-Mapping</h1>
+                        <a href="https://github.com/kellytton/RAID-Mapping"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p>I developed a C program to perform RAID mapping for RAID levels 0, 1, 01, 10, 4, and 5, identifying the specific hard disk and stripe containing a queried sector, along with the disk containing
+                        a copy or parity for redundancy if required.
+                    </p>
+                </div>
+                <div class="project glass" id="project-3">
+                    <img src="" alt="">
+                    <div class="project-line">
+                        <h1 class="project-title">Facial Recognition</h1>
+                        <a href="https://github.com/kellytton/facial-recognition-machine-learning"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p>In this project, I implemented LeNet-5 CNN on Olivetti faces, benchmarking against PCA, LDA, and SVM. Analyzed performance across different test splits and visualized results with CMC curves
+                        and confusion matrices.</p>
+                </div>
+                <div class="project glass" id="project-4">
+                    <img src="" alt="">
+                    <div class="project-line">
+                        <h1 class="project-title">Matching Game</h1>
+                        <a href="https://github.com/kellytton/matching-game-2022"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p>This maching game takes place on a responsive website, which was created using HTML/CSS/JS with sounds and animations.</p>
+                </div>
+                <div class="project glass" id="project-5">
+                    <img src="" alt="">
+                    <div class="project-line">
+                        <h1 class="project-title">Facial Recognition and Text Classification</h1>
+                        <a href="https://github.com/kellytton/facial-recognition-and-text-classification"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p>Along with facial recognition tasks, I developed an RNN-based IMDB text classifier, using data augmentation and evaluating performance on a reduced dataset. Explored with various RNN setups,
+                        visualizing training/validation plots and confusion matrices.</p>
+                </div>
+                <div class="project glass" id="project-6">
+                    <div class="project-line">
+                        <h1 class="project-title">Purrfect Path</h1>
+                        <a href="https://github.com/kellytton"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p>In a team of 3, we developed a comprehensive class scheduling platform for students to search for courses, plan and create schedules, compare their courses with friends, and display their
+                        schedules and friends list on user pages. We used JavaScript for client-side operations, including password strength validation, and HTML/CSS for web page design. The backend was built using
+                        Python, Flask, SQLAlchemy for database management, and PostgreSQL for data storage.
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
