Fixed spacing b/w title and navbar. Added animations to title

--- a/html/experience.html
+++ b/html/experience.html
@@ -14,9 +14,11 @@
     rel="stylesheet"/>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/images/portfolio_favicon.png">
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="../js/script.js" defer></script>
 </head>
-<body>
+<body class="experience-page">
     <header class="navbar">
         <div class="site-name">
             <a href="index.html">
