--- a/html/projects.html
+++ b/html/projects.html
@@ -14,9 +14,11 @@
     rel="stylesheet"/>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/images/portfolio_favicon.png">
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="../js/script.js" defer></script>
 </head>
-<body>
+<body class="projects-page">
     <header class="navbar">
         <div class="site-name">
             <a href="index.html">
@@ -34,7 +36,7 @@
     <main class="main">
         <div class="projects-section">
             <div class="projects-title">
-                <h1>Projects</h1>
+                <h1 class="animate__animated animate__bounce">Projects</h1>
             </div>
             <div class="projects-group">
                 <div class="project glass" id="project-1">
