Experience page near completion; started about page (need fixing)

--- a/html/about.html
+++ b/html/about.html
@@ -34,20 +34,25 @@
         </nav>
     </header>
     <main class="main">
-        <div class="avatar">
-
-        </div>
-        <div class="intro">
-            <h1>an introduction:</h1>
-            <p>Hi! My name is Kelly Ton, and I am currently in my fourth year at the University of South Florida located in Tampa, FL.
-                Studying Computer Science, I am working towards obtaining a Bachelor's of Science in Spring 2025. Like the tech
-                industry, I am constantly evolving and refining my skills.
-            </p>
-            <br>
-            <p>Over the summer, I gained experience as a Data and Software Engineer intern at SMX. Here, I worked with NLP techniques.
-                
-            </p>
+        <div class="about-section">
+            <div class="about-avatar">
+                <img src="../images/kelly.png" alt="">
+            </div>
+            <div class="about-intro">
+                <h1>an introduction:</h1>
+                <p>Hi! My name is Kelly Ton, and I am currently in my fourth year at the University of South Florida located in Tampa, FL.
+                    Studying Computer Science, I am working towards obtaining a Bachelor's of Science in Spring 2025. Like the tech
+                    industry, I am constantly evolving and refining my skills.
+                </p>
+                <br>
+                <p>Over the summer, I gained experience as a Data and Software Engineer intern at SMX. Here, I worked with NLP techniques.
+                    
+                </p>
+            </div>
         </div>
     </main>
+    <footer class="footer">
+        <p class="copyright">&copy; 2024 Kelly Ton</p>
+    </footer>
 </body>
 </html>
