--- a/html/experience.html
+++ b/html/experience.html
@@ -34,7 +34,40 @@
         </nav>
     </header>
     <main class="main">
-        
+        <div class="experience-section">
+            <div class="experience-title">
+                <h1 class="animate__animated animate__bounce">Experiences</h1>
+            </div>
+            <div class="experience-group">
+                <div class="tool glass" id="tool-1">
+                    <img src="../images/Python_logo.png" alt="">
+                    <h1>Python</h1>
+                </div>
+                <div class="tool glass" id="tool-2">
+                    <img src="../images/C_logo.png" alt="">
+                    <h1>C</h1>
+                </div>
+                <div class="tool glass" id="tool-3">
+                    <img src="../images/CPP_logo.png" alt="">
+                    <h1>C++</h1>
+                </div>
+                <div class="tool glass" id="tool-4">
+                    <img src="../images/HTML_logo.png" alt="">
+                    <h1>HTML</h1>
+                </div>
+                <div class="tool glass" id="tool-5">
+                    <img src="../images/CSS_logo.png" alt="">
+                    <h1>CSS</h1>
+                </div>
+                <div class="tool glass" id="tool-6">
+                    <img src="../images/JavaScript_logo.png" alt="">
+                    <h1>JavaScript</h1>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer class="footer">
+        <p class="copyright">&copy; 2024 Kelly Ton</p>
+    </footer>
 </body>
 </html>
