--- a/html/index.html
+++ b/html/index.html
@@ -46,5 +46,8 @@
             <img src="../images/image-removebg-preview.png">
         </div>
     </main>
+    <footer class="footer">
+        <p class="copyright">&copy; 2024 Kelly Ton</p>
+    </footer>
 </body>
 </html>
