--- a/html/projects.html
+++ b/html/projects.html
@@ -96,5 +96,8 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <p class="copyright">&copy; 2024 Kelly Ton</p>
+    </footer>
 </body>
 </html>
