--- a/html/experience.html
+++ b/html/experience.html
@@ -63,6 +63,10 @@
                     <img src="../images/JavaScript_logo.png" alt="">
                     <h1>JavaScript</h1>
                 </div>
+                <div class="tool glass" id="tool-7">
+                    <img src="../images/Lua_logo.png" alt="">
+                    <h1>Lua</h1>
+                </div>
             </div>
         </div>
     </main>
