Added animations to tool icons

--- a/html/experience.html
+++ b/html/experience.html
@@ -40,7 +40,7 @@
             </div>
             <div class="experience-group">
                 <div class="tool glass" id="tool-1">
-                    <img src="../images/Python_logo.png" alt="">
+                    <img class="animate__pulse" src="../images/Python_logo.png" alt="">
                     <h1>Python</h1>
                 </div>
                 <div class="tool glass" id="tool-2">
