Add feature for downloading resume

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
             <a href="https://www.linkedin.com/in/kellytton/"><i class="ri-linkedin-box-fill"></i></a>
             <a href="https://github.com/kellytton"><i class="ri-github-fill"></i></a>
             <a href="mailto:kthton@gmail.com"><i class="ri-mail-line"></i></a>
+            <a href="../resume/Software Engineer - Kelly Ton Resume.pdf" download><i class="ri-download-line"></i></a>
         </div>
         <div class="introduction-text">
             <p>Hey there, I am</p>
