--- a/html/projects.html
+++ b/html/projects.html
@@ -43,7 +43,7 @@
                     </div>
                     <p class="project-description">During my Data and Software Engineering internship at SMX, I developed a sentiment analyzer with geospatial plotting features. This tool was designed to analyze political social media posts, classifying them into sentiments (positive, negative, or neutral).
                         It also offered various models for analyzing the data.</p>
-                    <h3 class="project-tools">Tools: Python, AWS (Workspace, Amazon Translate), DBeaver (PostgreSQL), VADER, HuggingFace, spaCy, ReGex, etc.</h3>
+                    <h3 class="project-tools">Tools: GitLab, Python, AWS (Workspace, Amazon Translate), DBeaver (PostgreSQL), VADER, HuggingFace, spaCy, ReGex, etc.</h3>
                 </div>
                 <div class="project glass" id="project-2">
                     <div class="project-line">
@@ -52,7 +52,7 @@
                     </div>
                     <p class="project-description">In a team of 3, we developed a comprehensive class scheduling platform for students to search for courses, plan and create schedules, compare their courses with friends, and display their
                         schedules and friends list on user pages.</p>
-                    <h3 class="project-tools">Tools: HTML/CSS/JavaScript, Python, SQLAlchemy, Flask, PostgreSQL</h3>
+                    <h3 class="project-tools">Tools: GitHub, HTML/CSS/JavaScript, Python, SQLAlchemy, Flask, PostgreSQL</h3>
                 </div>
                 <div class="project glass" id="project-3">
                     <div class="project-line">
