--- a/html/experience.html
+++ b/html/experience.html
@@ -38,34 +38,58 @@
             <div class="experience-title">
                 <h1 class="animate__animated animate__bounce">Experiences</h1>
             </div>
-            <div class="experience-group">
-                <div class="tool glass" id="tool-1">
-                    <img class="animate__pulse" src="../images/Python_logo.png" alt="">
-                    <h1>Python</h1>
+            <div class="languages">
+                <div class="languages-title">
+                    <h2>Languages</h2>
                 </div>
-                <div class="tool glass" id="tool-2">
-                    <img src="../images/C_logo.png" alt="">
-                    <h1>C</h1>
+                <div class="experience-group">
+                    <div class="tool glass" id="tool-1">
+                        <img class="animate__pulse" src="../images/Python_logo.png" alt="">
+                        <h1>Python</h1>
+                    </div>
+                    <div class="tool glass" id="tool-2">
+                        <img class="animate__pulse" src="../images/C_logo.png" alt="">
+                        <h1>C</h1>
+                    </div>
+                    <div class="tool glass" id="tool-3">
+                        <img class="animate__pulse" src="../images/CPP_logo.png" alt="">
+                        <h1>C++</h1>
+                    </div>
+                    <div class="tool glass" id="tool-4">
+                        <img class="animate__pulse" src="../images/HTML_logo.png" alt="">
+                        <h1>HTML</h1>
+                    </div>
+                    <div class="tool glass" id="tool-5">
+                        <img class="animate__pulse" src="../images/CSS_logo.png" alt="">
+                        <h1>CSS</h1>
+                    </div>
+                    <div class="tool glass" id="tool-6">
+                        <img class="animate__pulse" src="../images/JavaScript_logo.png" alt="">
+                        <h1>JavaScript</h1>
+                    </div>
+                    <div class="tool glass" id="tool-7">
+                        <img class="animate__pulse" src="../images/Lua_logo.png" alt="">
+                        <h1>Lua</h1>
+                    </div>
                 </div>
-                <div class="tool glass" id="tool-3">
-                    <img src="../images/CPP_logo.png" alt="">
-                    <h1>C++</h1>
+            </div>
+            <div class="databases"></div>
+                <div class="databases-title">
+                    <h2>Databases</h2>
                 </div>
-                <div class="tool glass" id="tool-4">
-                    <img src="../images/HTML_logo.png" alt="">
-                    <h1>HTML</h1>
-                </div>
-                <div class="tool glass" id="tool-5">
-                    <img src="../images/CSS_logo.png" alt="">
-                    <h1>CSS</h1>
-                </div>
-                <div class="tool glass" id="tool-6">
-                    <img src="../images/JavaScript_logo.png" alt="">
-                    <h1>JavaScript</h1>
-                </div>
-                <div class="tool glass" id="tool-7">
-                    <img src="../images/Lua_logo.png" alt="">
-                    <h1>Lua</h1>
+                <div class="experience-group">
+                    <div class="tool glass" id="tool-1">
+                        <img class="animate__pulse" src="../images/Postgresql_logo.png" alt="">
+                        <h1>PostgreSQL</h1>
+                    </div>
+                    <div class="tool glass" id="tool-2">
+                        <img class="animate__pulse" src="../images/SQLite_logo.png" alt="">
+                        <h1>SQLite</h1>
+                    </div>
+                    <div class="tool glass" id="tool-3">
+                        <img class="animate__pulse" src="../images/DBeaver_logo.png" alt="">
+                        <h1>DBeaver</h1>
+                    </div>
                 </div>
             </div>
         </div>
