Update about page and its structure

--- a/html/about.html
+++ b/html/about.html
@@ -35,19 +35,22 @@
     </header>
     <main class="main">
         <div class="about-section">
-            <div class="about-avatar">
-                <img src="../images/kelly.png" alt="">
+            <div class="about-title">
+                <h1 class="animate__animated animate__bounce">About Me</h1>
             </div>
-            <div class="about-intro">
-                <h1>an introduction:</h1>
-                <p>Hi! My name is Kelly Ton, and I am currently in my fourth year at the University of South Florida located in Tampa, FL.
-                    Studying Computer Science, I am working towards obtaining a Bachelor's of Science in Spring 2025. Like the tech
-                    industry, I am constantly evolving and refining my skills.
-                </p>
-                <br>
-                <p>Over the summer, I gained experience as a Data and Software Engineer intern at SMX. Here, I worked with NLP techniques.
-                    
-                </p>
+            <div class="about-group">
+                <div class="about-img">
+                    <img src="../images/kellyton_img.png" alt="An image of Kelly Ton">
+                </div>
+                <div class="about-body">
+                    <div class="about-body-header">
+                        <h2 id="about-name">Kelly Ton</h2>
+                        <h3>B.S. Computer Science</h3>
+                    </div>
+                    <div class="about-body-content">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque aperiam eos beatae maxime aliquam minus, molestias exercitationem magnam dolore laborum voluptates laudantium libero necessitatibus. Impedit culpa odio autem inventore suscipit.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
