Update experience title

--- a/html/about.html
+++ b/html/about.html
@@ -48,7 +48,7 @@
                         <h3>B.S. Computer Science</h3>
                     </div>
                     <div class="about-body-content">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque aperiam eos beatae maxime aliquam minus, molestias exercitationem magnam dolore laborum voluptates laudantium libero necessitatibus. Impedit culpa odio autem inventore suscipit.</p>
+                        <p>I am a Computer Science student, graduating with a Bachelor of Science in Spring 2025. Passionate about technology, I am always evolving, refining my skills, and staying adaptable in an ever-changing industry.</p>
                     </div>
                 </div>
             </div>
