--- a/html/projects.html
+++ b/html/projects.html
@@ -48,7 +48,7 @@
                 <div class="project glass" id="project-2">
                     <div class="project-line">
                         <h1 class="project-title">Purrfect Path</h1>
-                        <a href="https://github.com/kellytton"><i class="ri-github-fill"></i></a>
+                        <a href="https://github.com/jaguan2/PurrfectPath"><i class="ri-github-fill"></i></a>
                     </div>
                     <p class="project-description">In a team of 3, we developed a comprehensive class scheduling platform for students to search for courses, plan and create schedules, compare their courses with friends, and display their
                         schedules and friends list on user pages.</p>
