--- a/html/experience.html
+++ b/html/experience.html
@@ -36,7 +36,7 @@
     <main class="main">
         <div class="experience-section">
             <div class="experience-title">
-                <h1 class="animate__animated animate__bounce">Experiences</h1>
+                <h1 class="animate__animated animate__bounce">Experience</h1>
             </div>
             <div class="languages">
                 <div class="languages-title">
