Update about me content

--- a/html/about.html
+++ b/html/about.html
@@ -48,7 +48,16 @@
                         <h3>B.S. Computer Science</h3>
                     </div>
                     <div class="about-body-content">
-                        <p>I am a Computer Science student, graduating with a Bachelor of Science in Spring 2025. Passionate about technology, I am always evolving, refining my skills, and staying adaptable in an ever-changing industry.</p>
+                        <p>Driven by a fascination with technoloy and problem-solving, my journey in computer science began in high school, where I
+                            experienced the thrill of transforming ideas into functional code. Currently pursuing my Bachelor of Science in Computer
+                            Science at USF, I am set to graduate in Spring 2025. My passion for technology keeps me constantly evolving, sharpening
+                            my skills, and staying adaptable in this ever-changing industry.</p>
+                        </p>
+                        <br>
+                        <p>Through my academic coursework and professional experiences, I have gained a deeper appreciation for the profound impact technology
+                            can have on the world. During my internship, I developed a sentiment analyzer that provided insightful analysis of social media trends and solidified my drive to build tools that make a meaningful difference.</p>
+                        <br>
+                        <p>As I continue to grow in my career, I’m eager to see what innovative projects and solutions lie ahead!</p>
                     </div>
                 </div>
             </div>
