--- a/html/experience.html
+++ b/html/experience.html
@@ -71,6 +71,10 @@
                         <img class="animate__pulse" src="../images/Lua_logo.png" alt="">
                         <h1>Lua</h1>
                     </div>
+                    <div class="tool glass" id="tool-8">
+                        <img class="animate__pulse" src="../images/Bootstrap_logo.svg.png" alt="">
+                        <h1>Bootstrap</h1>
+                    </div>
                 </div>
             </div>
             <div class="databases"></div>
@@ -85,10 +89,6 @@
                     <div class="tool glass" id="tool-2">
                         <img class="animate__pulse" src="../images/SQLite_logo.png" alt="">
                         <h1>SQLite</h1>
-                    </div>
-                    <div class="tool glass" id="tool-3">
-                        <img class="animate__pulse" src="../images/DBeaver_logo.png" alt="">
-                        <h1>DBeaver</h1>
                     </div>
                 </div>
             </div>
