fix main page; still need fixing w/ contact and info section

--- a/html/index.html
+++ b/html/index.html
@@ -43,8 +43,34 @@
             <h1 class="typing">Kelly<span>.</span></h1>
             <p>I am an <b>aspiring</b> software engineer and designer.</p>
         </div>
-        <div class="bedroom-image">
-            <img src="../images/image-removebg-preview.png">
+        <div class="qualifications">
+            <div class="qualifications-box glass degree">
+                <div class="qualifications-box-header">
+                    <h2 class="qualification-title">B.S. in Computer Science</h2>
+                    <h3 class="date">Expected Spring 2025</h3>
+                </div>
+                <div class="company">
+                    <p>University of South Florida</p>
+                </div>
+            </div>
+            <div class="qualifications-box glass internship">
+                <div class="qualifications-box-header">
+                    <h2 class="qualification-title">Data and Software Engineering Intern</h2>
+                    <h3 class="date">Summer 2024</h3>
+                </div>
+                <div class="company">
+                    <p>SMX</p>
+                </div>
+            </div>
+            <div class="qualifications-box glass bootcamp">
+                <div class="qualifications-box-header">
+                    <h2 class="qualification-title">Web Development Track</h2>
+                    <h3 class="date">May 2022 - July 2022</h3>
+                </div>
+                <div class="company">
+                    <p>Global Tech Bootcamp</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
