Update about me boxes

--- a/html/about.html
+++ b/html/about.html
@@ -43,11 +43,11 @@
                     <img src="../images/kellyton_img.png" alt="An image of Kelly Ton">
                 </div>
                 <div class="about-body">
-                    <div class="about-body-header">
+                    <div class="about-body-header glass">
                         <h2 id="about-name">Kelly Ton</h2>
-                        <h3>B.S. Computer Science</h3>
+                        <h3>Software Engineering</h3>
                     </div>
-                    <div class="about-body-content">
+                    <div class="about-body-content glass">
                         <p>Driven by a fascination with technoloy and problem-solving, my journey in computer science began in high school, where I
                             experienced the thrill of transforming ideas into functional code. Currently pursuing my Bachelor of Science in Computer
                             Science at USF, I am set to graduate in Spring 2025. My passion for technology keeps me constantly evolving, sharpening
