--- a/html/experience.html
+++ b/html/experience.html
@@ -27,10 +27,13 @@
         </div>
         <nav class="nav">
             <ul class="nav-links">
-                <li><a href="about.html">about</a></li>
-                <li><a href="experience.html" class="active">experience</a></li>
-                <li><a href="projects.html">projects</a></li>
+                <li class="nav-link"><a href="about.html">about</a></li>
+                <li class="nav-link"><a href="experience.html">experience</a></li>
+                <li class="nav-link"><a href="projects.html">projects</a></li>
             </ul>
+            <div class="hamburger">
+                <i class="ri-menu-line"></i>
+            </div>          
         </nav>
     </header>
     <main class="main">
