--- a/html/projects.html
+++ b/html/projects.html
@@ -37,7 +37,7 @@
     <main class="main">
         <div class="projects-section">
             <div class="projects-title">
-                <h1 class="animate__animated animate__bounce">Projects</h1>
+                <h1 class="animate__animated animate__bounce page-title">Projects</h1>
             </div>
             <div class="projects-group">
                 <div class="project glass" id="project-1">
