--- a/html/about.html
+++ b/html/about.html
@@ -39,7 +39,7 @@
     <main class="main">
         <div class="about-section">
             <div class="about-title">
-                <h1 class="animate__animated animate__bounce">About Me</h1>
+                <h1 class="animate__animated animate__bounce page-title">About Me</h1>
             </div>
             <div class="about-group">
                 <div class="about-img">
