--- a/html/experience.html
+++ b/html/experience.html
@@ -39,7 +39,7 @@
     <main class="main">
         <div class="experience-section">
             <div class="experience-title">
-                <h1 class="animate__animated animate__bounce">Experience</h1>
+                <h1 class="animate__animated animate__bounce page-title">Experience</h1>
             </div>
             <div class="languages">
                 <div class="languages-title">
@@ -48,35 +48,35 @@
                 <div class="experience-group">
                     <div class="tool glass" id="tool-1">
                         <img class="animate__pulse" src="../images/Python_logo.png" alt="">
-                        <h1>Python</h1>
+                        <h1 class="tool-name">Python</h1>
                     </div>
                     <div class="tool glass" id="tool-2">
                         <img class="animate__pulse" src="../images/C_logo.png" alt="">
-                        <h1>C</h1>
+                        <h1 class="tool-name">C</h1>
                     </div>
                     <div class="tool glass" id="tool-3">
                         <img class="animate__pulse" src="../images/CPP_logo.png" alt="">
-                        <h1>C++</h1>
+                        <h1 class="tool-name">C++</h1>
                     </div>
                     <div class="tool glass" id="tool-4">
                         <img class="animate__pulse" src="../images/HTML_logo.png" alt="">
-                        <h1>HTML</h1>
+                        <h1 class="tool-name">HTML</h1>
                     </div>
                     <div class="tool glass" id="tool-5">
                         <img class="animate__pulse" src="../images/CSS_logo.png" alt="">
-                        <h1>CSS</h1>
+                        <h1 class="tool-name">CSS</h1>
                     </div>
                     <div class="tool glass" id="tool-6">
                         <img class="animate__pulse" src="../images/JavaScript_logo.png" alt="">
-                        <h1>JavaScript</h1>
+                        <h1 class="tool-name">JavaScript</h1>
                     </div>
                     <div class="tool glass" id="tool-7">
                         <img class="animate__pulse" src="../images/Lua_logo.png" alt="">
-                        <h1>Lua</h1>
+                        <h1 class="tool-name">Lua</h1>
                     </div>
                     <div class="tool glass" id="tool-8">
                         <img class="animate__pulse" src="../images/Bootstrap_logo.svg.png" alt="">
-                        <h1>Bootstrap</h1>
+                        <h1 class="tool-name">Bootstrap</h1>
                     </div>
                 </div>
             </div>
@@ -87,11 +87,11 @@
                 <div class="experience-group">
                     <div class="tool glass" id="tool-1">
                         <img class="animate__pulse" src="../images/Postgresql_logo.png" alt="">
-                        <h1>PostgreSQL</h1>
+                        <h1 class="tool-name">PostgreSQL</h1>
                     </div>
                     <div class="tool glass" id="tool-2">
                         <img class="animate__pulse" src="../images/SQLite_logo.png" alt="">
-                        <h1>SQLite</h1>
+                        <h1 class="tool-name">SQLite</h1>
                     </div>
                 </div>
             </div>
