Update tools color for projects, and update sentiment analyzer tools

--- a/html/projects.html
+++ b/html/projects.html
@@ -46,7 +46,7 @@
                     </div>
                     <p class="project-description">During my Data and Software Engineering internship at SMX, I developed a sentiment analyzer with geospatial plotting features. This tool was designed to analyze political social media posts, classifying them into sentiments (positive, negative, or neutral).
                         It also offered various models for analyzing the data.</p>
-                    <h3 class="project-tools">Tools: GitLab, Python, AWS (Workspace, Amazon Translate), DBeaver (PostgreSQL), VADER, HuggingFace, spaCy, ReGex, etc.</h3>
+                    <h3 class="project-tools">Tools: GitLab, Python, AWS (Workspace, Amazon Translate), DBeaver (PostgreSQL), VADER, HuggingFace, spaCy, ReGex, Polars, Pyproj, Shapely, Cartopy</h3>
                 </div>
                 <div class="project glass" id="project-2">
                     <div class="project-line">
