--- a/html/projects.html
+++ b/html/projects.html
@@ -50,6 +50,14 @@
                 </div>
                 <div class="project glass" id="project-2">
                     <div class="project-line">
+                        <h1 class="project-title">EduPortal</h1>
+                        <a href="https://github.com/jaguan2/eduPortal"><i class="ri-github-fill"></i></a>
+                    </div>
+                    <p class="project-description">EduPortal is a data-intensive academic management system designed to securely handle and analyze student, instructor, course, and departmental data. It features tools for GPA analysis, detailed enrollment and performance reports, and strict access controls to ensure data integrity. The system implements real-world academic policies to provide a reliable solution for managing institutional operations.</p>
+                    <h3 class="project-tools">Tools: ReactJS, MUI, Python, Flask, SQLAlchemy, SQLite</h3>
+                </div>
+                <div class="project glass" id="project-3">
+                    <div class="project-line">
                         <h1 class="project-title">Purrfect Path</h1>
                         <a href="https://github.com/jaguan2/PurrfectPath"><i class="ri-github-fill"></i></a>
                     </div>
@@ -57,7 +65,7 @@
                         schedules and friends list on user pages.</p>
                     <h3 class="project-tools">Tools: GitHub, HTML/CSS/JavaScript, Python, SQLAlchemy, Flask, PostgreSQL</h3>
                 </div>
-                <div class="project glass" id="project-3">
+                <div class="project glass" id="project-4">
                     <div class="project-line">
                         <h1 class="project-title">Rapid Unix SHell</h1>
                         <a href="https://github.com/kellytton/RUSH-Rapid-Unix-SHell"><i class="ri-github-fill"></i></a>
@@ -66,7 +74,7 @@
                         The implementation contains robust output redirection functionality, enabling users to redirect command outputs to files, supporting both file overwriting and error handling for access issues.</p>
                     <h3 class="project-tools">Tools: C, Linux</h3>
                 </div>
-                <div class="project glass" id="project-4">
+                <div class="project glass" id="project-5">
                     <div class="project-line">
                         <h1 class="project-title">RAID-Mapping</h1>
                         <a href="https://github.com/kellytton/RAID-Mapping"><i class="ri-github-fill"></i></a>
@@ -75,7 +83,7 @@
                         a copy or parity for redundancy if required.</p>
                     <h3 class="project-tools">Tools: C, Linux</h3>
                 </div>
-                <div class="project glass" id="project-5">
+                <div class="project glass" id="project-6">
                     <div class="project-line">
                         <h1 class="project-title">Facial Recognition</h1>
                         <a href="https://github.com/kellytton/facial-recognition-machine-learning"><i class="ri-github-fill"></i></a>
@@ -84,7 +92,7 @@
                         and confusion matrices.</p>
                     <h3 class="project-tools">Tools: Python, Google Colab, scikit-learn, NumPy, Matplotlib, Seaborn</h3>
                 </div>
-                <div class="project glass" id="project-6">
+                <div class="project glass" id="project-7">
                     <div class="project-line">
                         <h1 class="project-title">Facial Recognition and Text Classification</h1>
                         <a href="https://github.com/kellytton/facial-recognition-and-text-classification"><i class="ri-github-fill"></i></a>
@@ -93,7 +101,7 @@
                         visualizing training/validation plots and confusion matrices.</p>
                     <h3 class="project-tools">Tools: Python, Google Colab, scikit-learn, NumPy, TensorFlow, Matplotlib, Seaborn</h3>
                 </div>
-                <div class="project glass" id="project-7">
+                <div class="project glass" id="project-8">
                     <div class="project-line">
                         <h1 class="project-title">Matching Game</h1>
                         <a href="https://github.com/kellytton/matching-game-2022"><i class="ri-github-fill"></i></a>
