Update EduPortal tools

--- a/html/projects.html
+++ b/html/projects.html
@@ -54,7 +54,7 @@
                         <a href="https://github.com/jaguan2/eduPortal"><i class="ri-github-fill"></i></a>
                     </div>
                     <p class="project-description">EduPortal is a data-intensive academic management system designed to securely handle and analyze student, instructor, course, and departmental data. It features tools for GPA analysis, detailed enrollment and performance reports, and strict access controls to ensure data integrity. The system implements real-world academic policies to provide a reliable solution for managing institutional operations.</p>
-                    <h3 class="project-tools">Tools: ReactJS, MUI, Python, Flask, SQLAlchemy, SQLite</h3>
+                    <h3 class="project-tools">Tools: Github, ReactJS, MUI, Python, Axios, Flask, SQLAlchemy, SQLite, Pandas</h3>
                 </div>
                 <div class="project glass" id="project-3">
                     <div class="project-line">
