Reorganize files for GitHub Pages

--- a/html/projects.html
+++ b/html/projects.html
@@ -19,7 +19,7 @@
 <body class="projects-page">
     <header class="navbar">
         <div class="site-name">
-            <a href="index.html">
+            <a href="../index.html">
                 <h1>kelly<span>.</span>ton</h1>
             </a>
         </div>
