--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelly Ton's Portfolio</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     rel="stylesheet"/>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/images/portfolio_favicon.png">
-    <script src="../js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <header class="navbar">
@@ -25,9 +25,9 @@
         </div>
         <nav class="nav">
             <ul class="nav-links">
-                <li class="nav-link"><a href="about.html">about</a></li>
-                <li class="nav-link"><a href="experience.html">experience</a></li>
-                <li class="nav-link"><a href="projects.html">projects</a></li>
+                <li class="nav-link"><a href="./html/about.html">about</a></li>
+                <li class="nav-link"><a href="./html/experience.html">experience</a></li>
+                <li class="nav-link"><a href="./html/projects.html">projects</a></li>
             </ul>
             <div class="hamburger">
                 <i class="ri-menu-line"></i>
@@ -39,7 +39,7 @@
             <a href="https://www.linkedin.com/in/kellytton/"><i class="ri-linkedin-box-fill"></i></a>
             <a href="https://github.com/kellytton"><i class="ri-github-fill"></i></a>
             <a href="mailto:kthton@gmail.com"><i class="ri-mail-line"></i></a>
-            <a href="../resume/Software Engineer - Kelly Ton Resume.pdf" download><i class="ri-download-line"></i></a>
+            <a href="./resume/Software Engineer - Kelly Ton Resume.pdf" download><i class="ri-download-line"></i></a>
         </div>
         <div class="introduction-text">
             <p>Hey there, I am</p>
