--- a/html/experience.html
+++ b/html/experience.html
@@ -21,7 +21,7 @@
 <body class="experience-page">
     <header class="navbar">
         <div class="site-name">
-            <a href="index.html">
+            <a href="../index.html">
                 <h1>kelly<span>.</span>ton</h1>
             </a>
         </div>
